# ZEngine

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt
Documents/: Notes.md  Targets.md
Engine/Shaders/: LambertBlinnPhoneFragmentShader.glsl  LocalToClipSpaceVertexShader.glsl  Shader.vert
Engine/Sources/: Application.cpp  Application.h  CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  CommonDefine.h  CoreDefine.h  CoreDefines.h  CoreTypes.h  Device.cpp  Device.h  GPU.cpp  GPU.h  Surface.cpp  Surface.h  Window.cpp  Window.h  ZEDefine.h
Engine/Sources/Graphic/: CommandBuffer.h  CommandPool.h  Device.h  GPU.h  PipelineState.h  RenderingContextInterface.h  Surface.h  VulkanBuffer.h  VulkanBufferManager.h  VulkanCommandBuffer.h  VulkanCommandBufferManager.h  VulkanCommandPool.h  VulkanContext.h  VulkanDescriptorPool.h  VulkanDescriptorSet.h  VulkanDescriptorSetLayout.h  VulkanDevice.h  VulkanFramebuffer.h  VulkanGPU.h  VulkanImage.h  VulkanImageView.h  VulkanPipeline.h  VulkanPipelineLayout.h  VulkanQueue.h  VulkanRenderPass.h  VulkanRenderingContext.h  VulkanSampler.h  VulkanShader.h  VulkanSurface.h  VulkanSwapchain.h  VulkanSynchronizer.h  Window.h
Engine/Sources/Graphic/Src/: CommandBuffer.cpp  CommandPool.cpp  Device.cpp  GPU.cpp  Surface.cpp  VulkanBuffer.cpp  VulkanBufferManager.cpp  VulkanCommandBuffer.cpp  VulkanCommandBufferManager.cpp  VulkanCommandPool.cpp  VulkanContext.cpp  VulkanDescriptorPool.cpp  VulkanDescriptorSet.cpp  VulkanDescriptorSetLayout.cpp  VulkanDevice.cpp  VulkanFramebuffer.cpp  VulkanGPU.cpp  VulkanImage.cpp  VulkanImageView.cpp  VulkanPipeline.cpp  VulkanPipelineLayout.cpp  VulkanQueue.cpp  VulkanRenderPass.cpp  VulkanRenderingContext.cpp  VulkanSampler.cpp  VulkanShader.cpp  VulkanSurface.cpp  VulkanSwapchain.cpp  VulkanSynchronizer.cpp  Window.cpp
Engine/Sources/Input/: InputSystem.h
Engine/Sources/Input/Src/: InputSystem.cpp
Engine/Sources/Misc/: AssertionMacros.h
Engine/Sources/Render/: DepthPass.h  DirectionalLightPass.h  ForwardRenderer.h  Frame.h  Material.cpp  Material.h  Mesh.h  Pipeline.cpp  RSMaterial.h  RenderGraph.h  RenderPass.h  RenderResource.h  RenderSystem.h  RenderTargets.h  Renderer.cpp  Renderer.h  RenderingCommandBuffer.h  RenderingContext.h  Shader.cpp  Shader.h  Texture.h  Viewport.h  Window.h
Engine/Sources/Render/Public/: Material.h  Pipeline.h  Renderer.h  Shader.h
Engine/Sources/Render/Src/: DepthPass.cpp  DirectionalLightPass.cpp  ForwardRenderer.cpp  Frame.cpp  Material.cpp  Mesh.cpp  RSMaterial.cpp  RenderGraph.cpp  RenderPass.cpp  RenderResource.cpp  RenderSystem.cpp  Renderer.cpp  RenderingCommandBuffer.cpp  RenderingContext.cpp  Shader.cpp  Texture.cpp  Viewport.cpp  Window.cpp
Engine/Sources/Resource/: BaseResource.h  MaterialResource.h  MeshResource.h  Resource.h  ShaderResource.h  TextureResource.h  ZEMaterialTypes.h
Engine/Sources/Resource/Src/: BaseResource.cpp  MaterialResource.cpp  MeshResource.cpp  ShaderResource.cpp  TextureResource.cpp
Engine/Sources/Scene/: CameraComponent.h  Material.h  MaterialComponent.h  MeshComponent.h  Object.h  Scene.cpp  Scene.h  SceneComponent.h  SceneObject.h  ScriptComponent.h  TransformComponent.h
Engine/Sources/Scene/Public/: Object.h  Scene.h
Engine/Sources/Scene/Src/: CameraComponent.cpp  Material.cpp  MaterialComponent.cpp  MeshComponent.cpp  Scene.cpp  SceneComponent.cpp  SceneObject.cpp  ScriptComponent.cpp  TransformComponent.cpp
Samples/Sources/Components/: CameraControlComponent.cpp  CameraControlComponent.h
Samples/Sources/Win64/: main.cpp
